<resources>

    <!--App-->

    <string name="app_name">DnD Spells</string>
    <string name="app_logo">App Logo</string>

    <!--Spell List-->

    <string name="spell_list_title">DnD Spells</string>

    <!--Spell Details-->

    <string name="spell_name">Commune with Nature</string>
    <string name="spell_subtitle">Level %s %s</string>
    <string name="spell_description">You briefly become one with nature and gain knowledge of the surrounding territory. In the outdoors, the spell gives you knowledge of the land within 3 miles of you. In caves and other natural underground settings, the radius is limited to 300 feet. The spell doesn’t function where nature has been replaced by construction, such as in dungeons and towns.</string>

    <!--Error Screen-->

    <string name="crystal_ball_illustration">Crystal ball illustration</string>
    <string name="error_default_text">Oops!</string>
    <string name="error_subtitle_text">Error</string>
    <string name="reload_text">Try again</string>

    <string name="error_message_connection">Your connection with the ethereal planes seems to be clouded.</string>
    <string name="error_message_generic">You rolled a 1 - something went wrong. Please try again.</string>
    <string name="error_message_no_data">No information could be found.</string>

</resources>