<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/error_image_view"
        android:layout_width="151dp"
        android:layout_height="167dp"
        android:contentDescription="@string/crystal_ball_illustration"
        android:src="@drawable/ic_crystal_ball"
        app:layout_constraintBottom_toTopOf="@id/error_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_40"
            android:text="@string/error_default_text"
            android:textColor="@color/purple_700"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_image_view" />

        <TextView
            android:id="@+id/error_text_subtitle_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="6sp"
            android:padding="@dimen/padding_20"
            android:text="@string/error_subtitle_text"
            android:textColor="@color/purple_700"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_text_view" />


</androidx.constraintlayout.widget.ConstraintLayout>